# novus-mars-rover-prototype-software-stack

arduino/encoder_rpm/: encoder_rpm.ino
src/gui/: package.xml
src/gui/src/: CP_251.py  Kivy_gui.py  demo.py  gui.py  video.py  webcam.py
src/inferno_arm/launch/: arm_joy.launch
src/inferno_arm/msg/: Pwm.msg
src/inferno_arm/scripts/: for.py  joy_ctrl.py
src/inferno_base/: CMakeLists.txt  package.xml
src/inferno_base/launch/: joy_tele.launch  joy_teleop.py
src/inferno_base/scripts/: arm_driver.py  drive_joy.py  joy_driver.py  joy_driver_2.py
src/inferno_base/src/: arrow_driver.cpp  drive_servo.py
src/inferno_bot/: CMakeLists.txt  joy_driver_2.py  package.xml  urdf.rviz
src/inferno_bot/Map/: model.sdf
src/inferno_bot/config/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  joint_names_inferno_bot.yaml  local_costmap_params.yaml  package.xml  sensor_fusion.yaml
src/inferno_bot/launch/: amcl.launch  ar_track.launch  display.launch  gazebo.launch  gmapping.launch  map_provider.launch  mapping.launch  navigation.launch  odom_nav.launch  robot_localisation.launch  startNav.launch
src/inferno_bot/meshes/: artag.dae  camera.STL  gps.STL  imu.STL  lbr.STL  lfr.STL  rbr.STL  rfr.STL
src/inferno_bot/src/: odom_true.py
src/inferno_bot/urdf/: ar_tag.urdf  inferno_bot.csv  inferno_bot.urdf  inferno_bot2.urdf  inferno_bot_imu.urdf
